...
                            fit: BoxFit.contain,
                          ),
                        ),
                        Container(
                          width: 400.0,
                          child: TextFormField(
                            key: ValueKey('email_textField_mkmf'),
                            controller: _model.emailTextFieldTextController,
                            focusNode: _model.emailTextFieldFocusNode,
                            autofocus: false,
                            enabled: true,
                            obscureText: false,
                            decoration: InputDecoration(
...
                                .asValidator(context),
                          ),
                        ),
                        Container(
                          width: 400.0,
                          child: TextFormField(
                            key: ValueKey('password_textField_4lj6'),
                            controller: _model.passwordTextFieldTextController,
                            focusNode: _model.passwordTextFieldFocusNode,
                            autofocus: false,
                            enabled: true,
                            obscureText: !_model.passwordTextFieldVisibility,
                            decoration: InputDecoration(
...
                            await authManager.resetPassword(
                              email: _model.emailTextFieldTextController.text,
                              context: context,
                            );
                          },
                          child: Text(
                            key: ValueKey('forgot_password_text_7mn6'),
                            'Forgot Password',
                            style: FlutterFlowTheme.of(context)
                                .labelLarge
                                .override(
                                  font: GoogleFonts.inter(
                                    fontWeight: FlutterFlowTheme.of(context)
...
                ),
                Column(
                  mainAxisSize: MainAxisSize.max,
                  mainAxisAlignment: MainAxisAlignment.end,
                  children: [
                    FFButtonWidget(
                      key: ValueKey('login_button_y5uo'),
                      onPressed: () async {
                        logFirebaseEvent('LOGIN_PAGE_login_button_ON_TAP');
                        logFirebaseEvent('login_button_auth');
                        GoRouter.of(context).prepareAuthEvent();

                        final user = await authManager.signInWithEmail(
...
                        logFirebaseEvent('LOGIN_PAGE_SignUp_text_ON_TAP');
                        logFirebaseEvent('SignUp_text_navigate_to');

                        context.pushNamed(SignUpWidget.routeName);
                      },
                      child: Text(
                        key: ValueKey('SignUp_text_m3jr'),
                        'Don\'t Have an account? Sign Up',
                        style: FlutterFlowTheme.of(context).labelLarge.override(
                              font: GoogleFonts.inter(
                                fontWeight: FlutterFlowTheme.of(context)
                                    .labelLarge
                                    .fontWeight,
...
