...
                          fit: BoxFit.cover,
                        ),
                      ),
                      Container(
                        width: 400.0,
                        child: TextFormField(
                          key: ValueKey('email_textField_00vj'),
                          controller: _model.emailTextFieldTextController,
                          focusNode: _model.emailTextFieldFocusNode,
                          autofocus: false,
                          enabled: true,
                          obscureText: false,
                          decoration: InputDecoration(
...
                              .asValidator(context),
                        ),
                      ),
                      Container(
                        width: 400.0,
                        child: TextFormField(
                          key: ValueKey('password_textField_54lt'),
                          controller: _model.passwordTextFieldTextController,
                          focusNode: _model.passwordTextFieldFocusNode,
                          autofocus: false,
                          enabled: true,
                          obscureText: !_model.passwordTextFieldVisibility,
                          decoration: InputDecoration(
...
                              .asValidator(context),
                        ),
                      ),
                      Container(
                        width: 400.0,
                        child: TextFormField(
                          key: ValueKey('confirmPassword_textField_bcjj'),
                          controller:
                              _model.confirmPasswordTextFieldTextController,
                          focusNode: _model.confirmPasswordTextFieldFocusNode,
                          autofocus: false,
                          enabled: true,
                          obscureText:
...
                              .asValidator(context),
                        ),
                      ),
                      Container(
                        width: 400.0,
                        child: TextFormField(
                          key: ValueKey('userName_textField_n27v'),
                          controller: _model.userNameTextFieldTextController,
                          focusNode: _model.userNameTextFieldFocusNode,
                          autofocus: false,
                          enabled: true,
                          obscureText: false,
                          decoration: InputDecoration(
...
              ),
              Column(
                mainAxisSize: MainAxisSize.max,
                mainAxisAlignment: MainAxisAlignment.end,
                children: [
                  FFButtonWidget(
                    key: ValueKey('Button_6ztc'),
                    onPressed: () async {
                      logFirebaseEvent('SIGN_UP_PAGE_SIGN_UP_BTN_ON_TAP');
                      logFirebaseEvent('Button_firestore_query');
                      _model.usernameCount = await queryUsersRecordCount(
                        queryBuilder: (usersRecord) => usersRecord.where(
                          'username',
...
