...
                                'EVENT_DETAILS_PAGE_back_button_ON_TAP');
                            logFirebaseEvent('back_button_navigate_back');
                            context.safePop();
                          },
                        ),
                        FlutterFlowIconButton(
                          key: ValueKey('EditToggle'),
                          borderRadius: 8.0,
                          buttonSize: 50.0,
                          fillColor: Color(0x003E7BFA),
                          icon: Icon(
                            Icons.edit,
                            color: FlutterFlowTheme.of(context).info,
...
                        ),
                      ],
                    ),
                    Container(
                      width: double.infinity,
                      child: TextFormField(
                        key: ValueKey('EditName'),
                        controller: _model.nameTextfieldTextController,
                        focusNode: _model.nameTextfieldFocusNode,
                        autofocus: false,
                        enabled: true,
                        readOnly: !_model.editingMode,
                        obscureText: false,
...
                            .asValidator(context),
                      ),
                    ),
                    Material(
                      color: Colors.transparent,
                      child: SwitchListTile.adaptive(
                        key: ValueKey('EditShared'),
                        value: _model.sharedWithSwitchListTileValue ??=
                            widget.eventDoc!.shared,
                        onChanged: (_model.editingMode ? false : true)
                            ? null
                            : (newValue) async {
                                safeSetState(() => _model
...
                            ),
                        ],
                      ),
                    Container(
                      width: double.infinity,
                      child: TextFormField(
                        key: ValueKey('EditDetails'),
                        controller: _model.textController5,
                        focusNode: _model.textFieldFocusNode,
                        autofocus: false,
                        enabled: true,
                        readOnly: !_model.editingMode,
                        obscureText: false,
...
                        validator: _model.textController5Validator
                            .asValidator(context),
                      ),
                    ),
                    if (_model.editingMode)
                      FFButtonWidget(
                        key: ValueKey('EditUpdate'),
                        onPressed: () async {
                          logFirebaseEvent(
                              'EVENT_DETAILS_PAGE_edit_button_ON_TAP');
                          if (_model.editingMode == true) {
                            logFirebaseEvent('edit_button_backend_call');

...
