...
              mainAxisSize: MainAxisSize.max,
              children: [
                Flexible(
                  child: Container(
                    width: double.infinity,
                    child: TextFormField(
                      key: ValueKey('NameText'),
                      controller: _model.titleTextFieldTextController,
                      focusNode: _model.titleTextFieldFocusNode,
                      autofocus: false,
                      enabled: true,
                      obscureText: false,
                      decoration: InputDecoration(
...
                  ),
                ],
              ),
            Container(
              width: double.infinity,
              child: TextFormField(
                key: ValueKey('DetailsBox'),
                controller: _model.detailsTextFieldTextController,
                focusNode: _model.detailsTextFieldFocusNode,
                autofocus: false,
                enabled: true,
                obscureText: false,
                decoration: InputDecoration(
...
                enableInteractiveSelection: true,
                validator: _model.detailsTextFieldTextControllerValidator
                    .asValidator(context),
              ),
            ),
            FFButtonWidget(
              key: ValueKey('EventAdd'),
              onPressed: () async {
                logFirebaseEvent('ADD_DATE_TASK_COMP_add_button_ON_TAP');
                if ((_model.titleTextFieldTextController.text != '') &&
                    (_model.titleTextFieldTextController.text !=
                        '\"Please Enter A Title Here\"')) {
                  logFirebaseEvent('add_button_backend_call');
...
